2021-09-03  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-000-permission.sh: Set DEBUGINFOD_CACHE_PATH
	and use an unique sqlite db.
	* run-debuginfod-archive-groom.sh: Likewise.
	* run-debuginfod-archive-test.sh: Likewise.
	* run-debuginfod-dlopen.sh: Likewise.
	* run-debuginfod-duplicate-urls.sh: Likewise.
	* run-debuginfod-extraction.sh: Likewise.
	* run-debuginfod-fd-prefetch-caches.sh: Likewise.
	* run-debuginfod-malformed.sh: Likewise.
	* run-debuginfod-sizetime.sh: Likewise.
	* run-debuginfod-tmp-home.sh: Likewise.
	* run-debuginfod-writable.sh: Likewise.

2021-09-03  Mark Wielaard  <mark@klomp.org>

	* debuginfod-subr.sh (EXTRA_DIST): Add debuginfod-subr.sh.

2021-08-28  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-find.sh: Use ":memory:" for the
	forwarded-ttl-limit tests.

2021-08-28  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-find.sh: Use clean, separate databases for
	forwarded-ttl-limit tests.

2021-08-20  Di Chen  <dichen@redhat.com>

	* run-debuginfod-find.sh: Add test for X-Forwarded-For hops limit.

2021-08-20  Noah Sanci  <nsanci@redhat.com>

	* debuginfod-find.sh: Separated file into 
	run-debuginfod-000-permission.sh, 
	run-debuginfod-archive-groom.sh,
	run-debuginfod-archive-rename.sh,
	run-debuginfod-archive-test.sh,
	run-debuginfod-artifact-running.sh,
	run-debuginfod-dlopen.sh,
	run-debuginfod-duplicate-urls.sh,
	run-debuginfod-extraction.sh,
	run-debuginfod-fd-prefetch-caches.sh,
	run-debuginfod-federation-link.sh,
	run-debuginfod-federation-metrics.sh,
	run-debuginfod-federation-sqlite.sh,
	run-debuginfod-file.sh,
	run-debuginfod-malformed.sh,
	run-debuginfod-no-urls.sh,
	run-debuginfod-query-retry.sh,
	run-debuginfod-regex.sh,
	run-debuginfod-sizetime.sh,
	run-debuginfod-tmp-home.sh,
	run-debuginfod-x-forwarded.sh
	and run-debuginfod-writable.sh.
	All files source debuginfod-subr.sh and use the $base variable to find ports.
	* tests/Makefile.am: Added the above new files to the test suite